<resources>
    <string name="app_name">Assignment1</string>
    <string name="receiver_details">RECEIVER DETAILS</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="contact_information">Contact Information</string>
    <string name="full_name">Full Name</string>
    <string name="next">Next</string>
    <string name="sender_details">Sender Details</string>
    <string name="review_information">Review Information</string>
    <string name="name">Name</string>
    <string name="contact_info">Contact Info</string>
</resources>