<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical"
        tools:context=".Receiver">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:text="@string/sender_details"
                android:textColor="@color/white"
                android:textSize="65sp"
                app:boxBackgroundColor="@color/white" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="50dp"
                app:boxCornerRadiusBottomStart="50dp"
                app:boxCornerRadiusTopEnd="50dp"
                app:boxCornerRadiusTopStart="50dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietSenderEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="30dp"
                    android:paddingEnd="0dp"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@id/tietSenderFullName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="50dp"
                app:boxCornerRadiusBottomStart="50dp"
                app:boxCornerRadiusTopEnd="50dp"
                app:boxCornerRadiusTopStart="50dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietSenderFullName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/full_name"
                    android:paddingStart="30dp"
                    android:paddingEnd="0dp"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@id/tietSenderContact"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="50dp"
                app:boxCornerRadiusBottomStart="50dp"
                app:boxCornerRadiusTopEnd="50dp"
                app:boxCornerRadiusTopStart="50dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietSenderContact"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/contact_information"
                    android:inputType="phone"
                    android:paddingStart="30dp"
                    android:paddingEnd="0dp"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@id/tietSenderCountry"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="50dp"
                app:boxCornerRadiusBottomStart="50dp"
                app:boxCornerRadiusTopEnd="50dp"
                app:boxCornerRadiusTopStart="50dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietSenderCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/country"
                    android:paddingStart="30dp"
                    android:paddingEnd="0dp"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@id/tietSenderAddress" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="50dp"
                app:boxCornerRadiusBottomStart="50dp"
                app:boxCornerRadiusTopEnd="50dp"
                app:boxCornerRadiusTopStart="50dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietSenderAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/address"
                    android:paddingStart="30dp"
                    android:paddingEnd="0dp"
                    android:inputType="text"
                    android:imeOptions="actionDone"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSenderNext"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/red"
                android:text="@string/next" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>